...
        }
    }

    Box(
        modifier = modifier
            .background(Color.Black)
            .testTag("steam-media-video"),
        contentAlignment = Alignment.Center,
    ) {
        AndroidView(
            factory = { playerContext ->
                PlayerView(playerContext).apply {
                    player = exoPlayer
...
